--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
       </li>
     </ul>
   </div>
+  
+  <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">+</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
 
   <script src="js/app.js"></script>
 </body>
