--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">+</span>
-    <p>Some text in the Modal..</p>
+    <p id="modal-para">Pop-up Modal!</p>
+    <button id="modal-btn">Play Again!</button>
   </div>
 
 </div>
@@ -105,3 +106,4 @@
 </body>
 
 </html>
+
