--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Matching Game</title>
+  <title>Memory Game</title>
   <meta name="description" content="">
   <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
@@ -14,7 +14,7 @@
 
   <div class="container" id="container">
     <header>
-      <h1>Matching Game</h1>
+      <h1>Memory Game</h1>
     </header>
 
     <section class="score-panel">
@@ -96,6 +96,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">+</span>
+    <h3 id="congrats">CONGRATULATIONS!</h3>
     <p id="modal-para">Pop-up Modal!</p>
     <button id="modal-btn">Play Again!</button>
   </div>
