--- a/index.html
+++ b/index.html
@@ -1,110 +1,116 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Memory Game</title>
+    <meta
+      name="Description"
+      content="A Memory Game built with vanilla JavaScript"
+    />
 
-<head>
-  <meta charset="utf-8">
-  <title>Memory Game</title>
-  <meta name="description" content="">
-  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-  <link rel="stylesheet" href="css/app.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<body>
+    <link
+      rel="stylesheet prefetch"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet prefetch"
+      href="https://fonts.googleapis.com/css?family=Coda"
+    />
+    <link rel="stylesheet" href="css/app.css" />
+  </head>
 
-  <div class="container" id="container">
-    <header>
-      <h1>Memory Game</h1>
-    </header>
+  <body>
+    <div class="container" id="container">
+      <header>
+        <h1>Memory Game</h1>
+      </header>
 
-    <section class="score-panel">
-      <ul class="stars">
-        <li><i class="fa fa-star"></i></li>
-        <li><i class="fa fa-star"></i></li>
-        <li><i class="fa fa-star"></i></li>
+      <section class="score-panel">
+        <ul class="stars">
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star"></i></li>
+        </ul>
+
+        <span class="separator"> |&nbsp; </span>
+
+        <!-- REMOVED SECS AND MINS TO MAKE THEM ALL JS -->
+        <span id="timer"></span>
+
+        <span class="separator"> &nbsp;|&nbsp; </span>
+
+        <span id="num-of-moves">0</span> <span id="moves">Moves</span>
+
+        <div class="restart">
+          <i class="fa fa-repeat"></i>
+        </div>
+      </section>
+
+      <ul class="deck" id="ul">
+        <li class="card">
+          <i class="fa fa-diamond"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-paper-plane-o"></i>
+        </li>
+        <li class="card match">
+          <i class="fa fa-anchor"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bolt"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-cube"></i>
+        </li>
+        <li class="card match">
+          <i class="fa fa-anchor"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-leaf"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bicycle"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-diamond"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bomb"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-leaf"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bomb"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bolt"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bicycle"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-paper-plane-o"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-cube"></i>
+        </li>
       </ul>
+    </div>
 
-      <span class="separator"> |&nbsp; </span>
-
-      <!-- REMOVED SECS AND MINS TO MAKE THEM ALL JS -->
-      <span id="timer"></span>
-
-      <span class="separator"> &nbsp;|&nbsp; </span>
-
-      <span id="num-of-moves">0</span> <span id="moves">Moves</span>
-
-      <div class="restart">
-        <i class="fa fa-repeat"></i>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">+</span>
+        <h3 id="congrats">CONGRATULATIONS!</h3>
+        <p id="modal-para">Pop-up Modal!</p>
+        <button id="modal-btn">Play Again!</button>
       </div>
-    </section>
+    </div>
 
-    <ul class="deck" id="ul">
-      <li class="card">
-        <i class="fa fa-diamond"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-paper-plane-o"></i>
-      </li>
-      <li class="card match">
-        <i class="fa fa-anchor"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-bolt"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-cube"></i>
-      </li>
-      <li class="card match">
-        <i class="fa fa-anchor"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-leaf"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-bicycle"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-diamond"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-bomb"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-leaf"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-bomb"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-bolt"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-bicycle"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-paper-plane-o"></i>
-      </li>
-      <li class="card">
-        <i class="fa fa-cube"></i>
-      </li>
-    </ul>
-  </div>
-  
-  <!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">+</span>
-    <h3 id="congrats">CONGRATULATIONS!</h3>
-    <p id="modal-para">Pop-up Modal!</p>
-    <button id="modal-btn">Play Again!</button>
-  </div>
-
-</div>
-
-  <script src="js/app.js"></script>
-</body>
-
+    <script src="js/app.js"></script>
+  </body>
 </html>
-
